--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Use your polished icon as touch icon -->
-  <link rel="apple-touch-icon" href="icon-1024.png">
+  <link rel="apple-touch-icon" href="shopping-pack-192.png">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -18,9 +18,9 @@
 <header>
   <div class="app" style="display:flex; align-items:center; gap:10px;">
     <!-- Top-left logo swapped to your shortcut icon -->
-    <img src="icon-192.png" alt="Camping Checklist" style="width:36px; height:36px; border-radius:8px;" />
+    <img src="shopping-pack-192.png" alt="Camping Checklist" style="width:36px; height:36px; border-radius:8px;" />
     <div>
-      <h1 style="margin:0; font-size:22px;">Camping Checklist</h1>
+      <h1 style="margin:0; font-size:22px;">Shopping List</h1>
       <div style="color:#9ca3af; font-size:13px;">Create a trip, tick things off, reset for next time. Works offline.</div>
     </div>
   </div>
