--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Camping Checklist</title>
+  <title>Shopping List</title>
 
   <!-- PWA bits -->
   <link rel="manifest" href="manifest.webmanifest">
@@ -18,10 +18,10 @@
 <header>
   <div class="app" style="display:flex; align-items:center; gap:10px;">
     <!-- Top-left logo swapped to your shortcut icon -->
-    <img src="shopping-pack-192.png" alt="Camping Checklist" style="width:36px; height:36px; border-radius:8px;" />
+    <img src="shopping-pack-192.png" alt="Shopping List" style="width:36px; height:36px; border-radius:8px;" />
     <div>
       <h1 style="margin:0; font-size:22px;">Shopping List</h1>
-      <div style="color:#9ca3af; font-size:13px;">Create a trip, tick things off, reset for next time. Works offline.</div>
+      <div style="color:#9ca3af; font-size:13px;">Create a list, tick things off, reset for next time. Works offline.</div>
     </div>
   </div>
 </header>
@@ -75,9 +75,9 @@
 
     <!-- Progress + Sort -->
     <div class="row">
-      <span class="badge" id="progressBadge">0/0 packed</span>
+      <span class="badge" id="progressBadge">0/0 In Basket</span>
       <div style="flex:1"></div>
-      <button id="sortBtn">Sort: Unpacked ↑</button>
+      <button id="sortBtn">Sort: In Basket ↑</button>
     </div>
 
     <!-- List -->
